--- a/app/webroot/css/jquery/plugins/colorbox/colorbox.css
+++ b/app/webroot/css/jquery/plugins/colorbox/colorbox.css
@@ -20,7 +20,7 @@
     Change the following styles to modify the appearance of Colorbox.  They are
     ordered & tabbed in a way that represents the nesting of the generated HTML.
 */
-#cboxOverlay{background:url(../img/jquery/plugins/colorbox/overlay.png) repeat 0 0;}
+#cboxOverlay{background: #000;}
 #colorbox{outline:0;}
     #cboxTopLeft{width:21px; height:21px; background:url(../img/jquery/plugins/colorbox/controls.png) no-repeat -101px 0;}
     #cboxTopRight{width:21px; height:21px; background:url(../img/jquery/plugins/colorbox/controls.png) no-repeat -130px 0;}
