--- a/app/webroot/css/vamshop.css
+++ b/app/webroot/css/vamshop.css
@@ -1077,3 +1077,8 @@ div#spinner {
 .featured-categories .thumbnail:hover .link {
   left: 0;
 }
+
+.sp-replacer {
+    border: 0px;
+    background: transparent;
+}
