--- a/app/webroot/css/admin.css
+++ b/app/webroot/css/admin.css
@@ -243,6 +243,11 @@ ul#myTab
 
 /* Forms */
 
+.form-control
+	{
+		border-radius: 0;
+	}
+
 form
 	{
 		padding: 0;
@@ -285,12 +290,12 @@ legend
 .input.checkbox, 
 .input.select 
 	{
-		margin: 0 0 0 0; 
+		margin: 12px 0 0 0; 
 	}
 
 .input.checkbox 
 	{
-		margin: 0 0 0 14%; 
+		margin: 12px 0 0 14%; 
 	}
 
 .input input,
