--- a/app/webroot/css/admin.css
+++ b/app/webroot/css/admin.css
@@ -12,9 +12,6 @@ html,body
 		margin: 0;
 		padding: 0;
 		background-color: #fff;
-		background-image: url(../img/admin/bg.png);
-		background-position: 0 -221px;
-		background-repeat: repeat-x; 
 	}
 		 
 /* Links color */
@@ -117,12 +114,30 @@ div#footer p
 }
 
 section {
-    background: transparent;
+    background: #f8f8f8;
 }
 
 .nav, .navbar {
 margin-bottom: 0;
 border: 0;
+}
+
+.navbar-toggle {
+border: 0px;
+}
+
+.navbar-default .navbar-nav > li > a:hover, 
+.navbar-default .navbar-nav > li > a:focus, 
+.navbar-default .navbar-nav > li > a:active {
+ color: #000; 
+}
+
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+background-color: transparent;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #000;
 }
 
 .hoe-left-header a {
@@ -182,34 +197,15 @@ div#page
 div#page h2
 	{
 		margin: 0;
-		padding: 0 0 0 10px;
-		background-color: #f4f4f4;
-		background-image: url(../img/admin/bg.png);
-		background-position: 0 -135px;
-		background-repeat: repeat-x; 
-		border-top: 1px solid #c0c1c2;
-		border-left: 1px solid #c0c1c2;
-		border-right: 1px solid #c0c1c2;
-		border-bottom: 1px solid #c0c1c2;
-		border-top-left-radius: 0px;
-		border-top-right-radius: 0px;
+		padding: 15px;
+		background-color: transparent;
 		vertical-align: middle;
 	}
 	
 div#pageContent
 	{
 		margin: 0;
-		padding: .5em;
-		background-color: #fff;
-		background-image: url(../img/admin/bg.png);
-		background-position: 0 -602px;
-		background-repeat: repeat-x; 
-		border-top: 0px;
-		border-left: 1px solid #c0c1c2;
-		border-right: 1px solid #c0c1c2;
-		border-bottom: 1px solid #c0c1c2;
-		border-bottom-left-radius: 0px;
-		border-bottom-right-radius: 0px;
+		padding: 0 15px;
 	}
 
 /* /Page content */
@@ -939,97 +935,5 @@ a[href]:after
 		height:320px;
 		width: 95%;
 	}
-
-.panel {
-  padding: 5px;
-  margin-bottom: 10px;
-  background-color: #ffffff;
-  border: 1px solid #dddddd;
-  border-radius: 0px;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-}
-
-.panel-heading {
-  padding: 5px 10px;
-  margin: -5px -5px 5px;
-  background-color: #f5f5f5;
-  border-bottom: 1px solid #dddddd;
-  border-top-right-radius: 0px;
-  border-top-left-radius: 0px;
-}
-
-.panel-heading h3 {
-  padding: 0;
-  margin: 0;
-}
-
-.panel-footer {
-  padding: 5px 10px;
-  margin: -5px -5px 5px;
-  background-color: #f5f5f5;
-  border-top: 1px solid #dddddd;
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
-}
-
-.panel-primary {
-  border-color: #428bca;
-}
-
-.panel-primary .panel-heading {
-  color: #ffffff;
-  background-color: #428bca;
-  border-color: #428bca;
-}
-
-.panel-success {
-  border-color: #d6e9c6;
-}
-
-.panel-success .panel-heading {
-  color: #468847;
-  background-color: #dff0d8;
-  border-color: #d6e9c6;
-}
-
-.panel-warning {
-  border-color: #fbeed5;
-}
-
-.panel-warning .panel-heading {
-  color: #c09853;
-  background-color: #fcf8e3;
-  border-color: #fbeed5;
-}
-
-.panel-danger {
-  border-color: #eed3d7;
-}
-
-.panel-danger .panel-heading {
-  color: #b94a48;
-  background-color: #f2dede;
-  border-color: #eed3d7;
-}
-
-.panel-info {
-  border-color: #bce8f1;
-}
-
-.panel-info .panel-heading {
-  color: #3a87ad;
-  background-color: #d9edf7;
-  border-color: #bce8f1;
-}
-
-.panel>.table, .panel>.table-responsive>.table {
-      margin-bottom: 0;
-}
-
-.panel-body span a {
-  color: #fff;
-}
-
 			 
 /*]]>*/
