--- a/app/webroot/css/admin.css
+++ b/app/webroot/css/admin.css
@@ -146,12 +146,18 @@ color: #fff;
 
 #hoeapp-wrapper {
 color: #000;
+background: transparent;
 }
 
 .page_menu_item
 	{
 		margin: 0;
 		padding: 0 15px;
+	}
+
+.panel
+	{
+		border-radius: 0;
 	}
 	
 /* /Menu */
