--- a/app/webroot/css/admin.css
+++ b/app/webroot/css/admin.css
@@ -93,7 +93,7 @@ div#footer
 	{
 		clear: left;
 		width: 100%;
-		background: transparent;
+		background: #f8f8f8;
 		border-top: 0px solid #67748B;
 		text-align: center;
 		color: #000;
@@ -438,7 +438,8 @@ div#content table.contentTable th
 		color: #000;
 		font-weight: normal;
 		padding: .9em;
-		margin: 0;
+		margin: 0 auto;
+		text-align: center;
 		background-color: #e3eff7;
 		background-image: url(../img/admin/bg.png);
 		background-position: 0 0;
@@ -737,6 +738,7 @@ div.multiAction
 div.clear
 	{
 		clear: both;
+		padding-top: 10px;
 	}
 			 
 			 
