--- a/app/webroot/css/jquery/plugins/hoe/hoe.css
+++ b/app/webroot/css/jquery/plugins/hoe/hoe.css
@@ -186,7 +186,7 @@ body{position:relative;}
     top: 0;
 	position:absolute;
 	float:left;
-	min-height:100%;
+	min-height:10000px;
     z-index: 100;
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
 }
