Добавлена полоса прокрутки в бокс корзины, что б кнопки оформления заказа всегда были видны

--- a/app/webroot/css/vamshop.css
+++ b/app/webroot/css/vamshop.css
@@ -411,6 +411,8 @@ background: #fff;
 }
 .shopping-cart-widget .products {
   margin: 0 0 20px 0;
+  overflow-y: auto;
+  max-height: 500px;
 }
 .shopping-cart-widget .products .media-heading {
   font-weight: bold;
