--- a/app/webroot/css/vamshop.css
+++ b/app/webroot/css/vamshop.css
@@ -1081,3 +1081,17 @@ div#spinner {
     background-color: #f5f5f5;
     border: 1px solid #ff6633;
 }
+
+pre {
+    display: block;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    font-weight: normal;
+    color: #000;
+    word-break: break-all;
+    word-wrap: break-word;
+    background-color: transparent;
+    border: 0px solid transparent;
+    border-radius: 0px;
+    font-family: Arial !important;
+}
