--- a/app/webroot/css/vamshop.css
+++ b/app/webroot/css/vamshop.css
@@ -9,7 +9,7 @@ text-decoration: none;
 a:hover,
 a:active,
 a:focus {
-  color: #ff6633;
+  color: #dd2c00;
   text-decoration: underline;
 }
 a,
@@ -81,7 +81,7 @@ a#scrollup {
   bottom: 20px;
   right: 30px;
   padding: 5px 10px;
-  background: #ff6633;
+  background: #dd2c00;
   color: #fff;
 }
 
@@ -143,7 +143,7 @@ margin-bottom: 0;
 }
 
 .navbar-default {
-background-color: #ff6633;
+background-color: #dd2c00;
 }
 
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
@@ -159,7 +159,7 @@ border-color: #f44336;
 .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
 .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
   color: #fff;
-  background-color: #0081c2;
+  background-color: #005685;
 }
 
 .navbar-default .navbar-nav .open .dropdown-menu > li > a,
@@ -196,7 +196,7 @@ margin: 0;
 .dropdown-menu > li > a:focus,
 .dropdown-menu > .active > a:hover,
 .dropdown-menu > .active > a:focus {
-  background-color: #0081c2;
+  background-color: #005685;
 }
 
 .dropdown-menu>li>a {
@@ -248,7 +248,7 @@ border: 1px solid #eee;
 .navbar-categories .navbar-nav > li > a:focus,
 .navbar-categories .navbar-nav > li > a:active {
 color: #fff;
-background: #ff6633;
+background: #dd2c00;
 border: 1px solid #f44336;
 }
 
@@ -306,14 +306,14 @@ color: #fff;
 .btn-warning:hover,
 .btn-warning:focus,
 .btn-warning:active {
-background-color: #ff5722;
-border: 1px solid #ff5722;
+background-color: #dd2c00;
+border: 1px solid #dd2c00;
 color: #fff;
 }
 
 .btn-warning {
-background-color: #ff6633;
-border: 1px solid #ff6633;
+background-color: #dd2c00;
+border: 1px solid #dd2c00;
 color: #fff;
 }
 
@@ -322,8 +322,8 @@ color: #fff;
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #fff;
-  background-color: #0081c2;
-  border-color: #0081c2;
+  background-color: #005685;
+  border-color: #005685;
 }
 
 /* ========================================================================== */
@@ -393,7 +393,7 @@ color: #fff;
 .pagination > li > a:focus,
 .pagination > li > span:focus {
   color: #fff;
-  background-color: #ff6633;
+  background-color: #dd2c00;
 }
 .pagination > .active > a,
 .pagination > .active > span,
@@ -402,7 +402,7 @@ color: #fff;
 .pagination > .active > a:focus,
 .pagination > .active > span:focus {
   color: #fff;
-  background-color: #ff6633;
+  background-color: #dd2c00;
 }
 
 /* Shopping Cart Widget
@@ -418,14 +418,14 @@ background: #fff;
 .shopping-cart-widget .products .media-heading {
   font-weight: bold;
   font-size: 14px;
-  color: #ff6633;
+  color: #dd2c00;
 }
 .shopping-cart-widget .products .media-heading a {
   text-decoration: none;
-  color: #ff6633;
+  color: #dd2c00;
 }
 .shopping-cart-widget .products .media-heading a:hover {
-  color: #ff6633;
+  color: #dd2c00;
 }
 .shopping-cart-widget p.buttons {
   padding-bottom: 5px;
@@ -461,7 +461,7 @@ footer .copyright {
   position: absolute;
   left: -30px;
   padding: 7px 15px 8px 50px;
-  background-color: #ff6633;
+  background-color: #dd2c00;
   color: #ffffff;
   font-size: 16px;
   font-weight: bold;
@@ -470,7 +470,7 @@ footer .copyright {
 
 .thumbnail .label {
   position: absolute;
-  background-color: #ff6633;
+  background-color: #dd2c00;
   color: #fff;
   right: 0;
   padding: 0 15px 0 15px;
@@ -487,7 +487,7 @@ footer .copyright {
 }
 
 .thumbnail .label.new {
-  background-color: #0081c2;
+  background-color: #005685;
 }
 
 .thumbnail .label.hit {
@@ -495,49 +495,49 @@ footer .copyright {
 }
 
 .thumbnail .label.sale {
-  background-color: #00b600;
+  background-color: #006100;
 }
 
 .thumbnail .label.html {
   background-color: transparent;
 }
 .thumbnail .price {
-  color: #ff6633;
+  color: #dd2c00;
   font-size: 16px;
   font-weight: bold;
   z-index: 5;
   clear: both;
 }
 .thumbnail .old-price {
-  color: gray;
+  color: #000;
   font-size: 16px;
   font-weight: bold;
   z-index: 5;
   clear: both;
 }
 .thumbnail .save {
-  color: #ff6633;
+  color: #dd2c00;
   font-size: 16px;
   font-weight: bold;
   z-index: 5;
   clear: both;
 }
 .description .price {
-  color: #ff6633;
+  color: #dd2c00;
   font-size: 20px;
   font-weight: bold;
   z-index: 5;
   clear: both;
 }
 .description .old-price {
-  color: gray;
+  color: #000;
   font-size: 16px;
   font-weight: bold;
   z-index: 5;
   clear: both;
 }
 .description .save {
-  color: #ff6633;
+  color: #dd2c00;
   font-size: 16px;
   font-weight: bold;
   z-index: 5;
@@ -545,7 +545,7 @@ footer .copyright {
 }
 .rating {
   background-color: transparent;
-  color: #ff6633;
+  color: #dd2c00;
   right: 0;
   padding: 0 5px 0 0;
   font-size: 16px;
@@ -626,7 +626,7 @@ ul.payment-methods li:hover,
 ul.shipping-methods .selected,
 ul.payment-methods .selected
 	{
-		border: 2px solid #ff6633;
+		border: 2px solid #dd2c00;
 		border-radius: 0px;
 	}
 
@@ -740,7 +740,7 @@ div#spinner {
   top: 80%;
   left: -30px;
   padding: 10px 15px 10px 50px;
-  background-color: #ff6633;
+  background-color: #dd2c00;
   color: #ffffff;
   font-size: 16px;
   font-weight: bold;
@@ -820,7 +820,7 @@ div#spinner {
   transform: scale(1);
 }
 .shop-products .thumbnail:hover .title {
-  color: #ff6633;
+  color: #dd2c00;
 }
 
 .product-images {
@@ -918,7 +918,7 @@ div#spinner {
   transition: all 0.3s ease-out;
 }
 .product-images .thumbnail .zoom {
-  background-color: #ff6633;
+  background-color: #dd2c00;
   color: #ffffff;
   position: absolute;
   left: 50%;
@@ -1031,7 +1031,7 @@ div#spinner {
   left: 0;
   bottom: 5%;
   padding: 10px 15px;
-  background-color: #ff6633;
+  background-color: #dd2c00;
   color: #ffffff;
   -webkit-transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
@@ -1079,7 +1079,7 @@ div#spinner {
     display: block;
     padding: 10px 15px;
     background-color: #f5f5f5;
-    border: 1px solid #ff6633;
+    border: 1px solid #dd2c00;
 }
 
 pre {
