--- a/app/webroot/css/vamshop.css
+++ b/app/webroot/css/vamshop.css
@@ -1,5 +1,8 @@
 body {
    background-color: #f9f9f9;
+   font-family: "Roboto", sans-serif;
+   font-weight: normal;
+   font-size: 16px;
 }
 
 a {
@@ -1097,5 +1100,6 @@ pre {
     background-color: transparent;
     border: 0px solid transparent;
     border-radius: 0px;
-    font-family: Arial !important;
+    font-family: "Roboto", sans-serif !important;
+    font-size: 16px !important;
 }
